<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">QuantumVPN</string>
    <string name="widget_description">Быстрое подключение QuantumVPN</string>
    <string name="widget_title">QuantumVPN</string>
    <string name="widget_wide_description">Трафик, подключение и смена сервера</string>
    <string name="widget_wide_title">QuantumVPN · широкий</string>
    <string name="shortcut_connect_short">Подключить</string>
    <string name="shortcut_connect_long">Подключить VPN</string>
    <string name="shortcut_disconnect_short">Отключить</string>
    <string name="shortcut_disconnect_long">Отключить VPN</string>
    <string name="shortcut_ping_short">Серверы</string>
    <string name="shortcut_ping_long">Открыть серверы и пинг</string>
    <string name="shortcut_import_short">Импорт</string>
    <string name="shortcut_import_long">Импорт профиля</string>
    <string name="shortcut_speedtest_short">Speedtest</string>
    <string name="shortcut_speedtest_long">Запустить speedtest</string>
    <string name="status_protected">Защищено</string>
    <string name="status_unprotected">Не защищено</string>
    <string name="action_add_subscription">Добавить подписку</string>
    <string name="network_map">Карта сети</string>
    <string name="choose_server">Выберите сервер</string>
    <string name="speed_test">Спидтест</string>
    <string name="why_slow">Почему медленно</string>
    <string name="event_journal">Журнал событий</string>
    <string name="trusted_wifi">Доверенные Wi‑Fi</string>
    <string name="family_protect">Семейный фильтр</string>
    <string name="best_ping">Лучший пинг</string>
    <string name="same_region">Тот же регион</string>
    <string name="tab_home">Главная</string>
    <string name="tab_servers">Серверы</string>
    <string name="tab_routing">Маршрутизация</string>
    <string name="tab_settings">Настройки</string>
    <string name="undo">Отменить</string>
    <string name="subscription_expiring">Подписка истекает</string>
    <string name="dns_preview">DNS preview</string>
    <string name="tips_carousel">Советы</string>
    <string name="reliability_uptime">Uptime</string>
    <string name="work_schedule">Рабочее подключение</string>
    <string name="skip_roaming">Не автоподключать в роуминге</string>
    <string name="mobile_autoconnect">Автоподключение на mobile</string>
    <string name="time_routing">Time-based routing</string>
    <string name="recommended_server">Рекомендовано</string>
    <string name="subscription_diff">Изменения подписки</string>
</resources>
